--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
-h1 {
-    background-color: aqua;
+ * {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box; 
 }
+
+#title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
