--- a/Product_Landing_Page/style.css
+++ b/Product_Landing_Page/style.css
@@ -166,7 +166,7 @@ iframe {
 
 .product {
   display: flex;
-  justify-content: center;
+  margin: 10px;
   align-items: center;
   flex-direction: column;
   width: calc(100% / 3);
@@ -174,9 +174,74 @@ iframe {
   text-align: center;
 }
 
-.level {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.product > .level {
+  background-color: #ddd;
+  padding: 15px 0;
+  color: #000000;
+  width: 100%;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.product > h2 {
+  font-weight: 900;
   padding: 1rem;
+}
+
+.product > ol {
+  margin: 15px 0;
+}
+
+.product > ol > li {
+  font-weight: 600;
+  padding: 5px 0;
+}
+
+li {
+  list-style: none;
+}
+
+.btn {
+  margin: 1rem 0;
+  font-weight: 400;
+  background-color: #f1c40f;
+  border: none;
+  text-transform: uppercase;
+  font-size: 1em;
+  height: 40px;
+  padding: 0 20px;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  transition: ease-in-out 0.15s;
+  background-color: orange;
+}
+
+footer {
+  margin-top: 30px;
+  background-color: #ddd;
+  padding: 20px;
+}
+
+footer > ul {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+footer > ul > li {
+  margin: 0 10px;
+}
+
+footer > ul > li a {
+  text-decoration: none;
+  color: #000000;
+  font-weight: 700;
+}
+
+span {
+  margin-top: 5px;
+  float: right;
 }
